2017-04-14 Even Rouault <even dot rouault at spatialys dot com>

	* *.h, libxtiff/xtiffio.h: replace CPL_DLL by GTIF_DLL

2017-01-10 Even Rouault <even dot rouault at spatialys dot com>

	* csv/*: update to EPSG v9.0 (#83)

2017-01-10 Even Rouault <even dot rouault at spatialys dot com>

	* csv/datum_shift_pref.csv: add overrides for PCS 2065
	(S-JTSK (Ferro) / Krovak)
	Fixes https://trac.osgeo.org/gdal/ticket/4762 and
	https://github.com/OSGeo/proj.4/issues/185

2017-01-10 Even Rouault <even dot rouault at spatialys dot com>

	* csv/datum_shift_pref.csv: add overrides for PCS 2397/2398/2399
	(Pulkovo 1942(83) / 3-degree Gauss-Kruger zone 3,4,5)
	Fixes https://github.com/OSGeo/proj.4/issues/235

2017-01-10 Even Rouault <even dot rouault at spatialys dot com>

	* csv/datum_shift_pref.csv: add overrides for PCS 31251,31252,31253
	(MGI (Ferro) / Austria)
	Fixes https://github.com/OSGeo/proj.4/issues/254

2017-01-10 Even Rouault <even dot rouault at spatialys dot com>

	* csv/build_pcs.py, csv/datum_shift_pref.csv: add mechanism to define
	TOWGS84 parameters per PCS (instead of only relying on the TOWGS84
	parameters of the underlying GCS).
	Add override for EPSG:3844 ("Pulkovo 1942(58) / Stereo70" Romania)
	Fixes https://trac.osgeo.org/geotiff/ticket/52

2017-01-10 Even Rouault <even dot rouault at spatialys dot com>

	* csv/datum_shift_pref.csv: add override for CH1903 (EPSG:4149)
	Fixes https://trac.osgeo.org/geotiff/ticket/73

2016-11-23 Even Rouault <even dot rouault at spatialys dot com>

	* geo_new.c, geo_print.c, geo_set.c, bin/applygeo.c, bin/geotifcp.c,
	bin/makegeo.c: cppcheck fixes (signed vs unsigned printf/sscanf,
	redundantAssignment)

2016-11-21 Even Rouault <even dot rouault at spatialys dot com>

	* geo_print.c: secure sscanf()/fscanf() uses.

2016-11-20 Even Rouault <even dot rouault at spatialys dot com>

	* geo_simpletags.c: add cppcheck-suppress duplicateBranch annotation.

2016-09-04 Even Rouault <even dot rouault at spatialys dot com>
